# estat-api-wrapper

./: LICENSE  README.md
python/: README.md  dev-requirements.txt  pyproject.toml
python/estat_api/: __init__.py  _version.py  api.py
python/estat_api/parameters/: __init__.py  bulk_stats_data.py  common.py  data_catalog.py  dataset_reference.py  dataset_registration.py  meta_info.py  stats_data.py  stats_table_info.py
python/examples/: test_api.ipynb
python/tests/: test_estat_api.py
